wip(openvpn): add shadowsocks_password env var

--- a/cluster/apps/default/qbittorent/secrets.enc.yaml
+++ b/cluster/apps/default/qbittorent/secrets.enc.yaml
@@ -4,32 +4,33 @@ metadata:
     name: openvpn-secrets
     namespace: default
 stringData:
-    OPENVPN_USER: ENC[AES256_GCM,data:Oof3Vqob/x8OZJ02l6isfA==,iv:UmOBL6ZOKrRY/WlX0XN0bFegeBhrh6O+Cl5pH7yuk4g=,tag:eGyvDOVt/8M6VJgI8TY6zQ==,type:str]
+    OPENVPN_USER: ENC[AES256_GCM,data:9RTroSE4UZ15LXe7xuLXRQ==,iv:WMj95LtOW5jc1II5+d/Ajo80C/HabX4qQx3reyZx8p8=,tag:EYU2KwKUqwjL247qMFtjhA==,type:str]
+    SHADOWSOCKS_PASSWORD: ENC[AES256_GCM,data:RA==,iv:J8lTsxt6Mmk3rumu4mx3w7jetVB9AwXrjPbcPaHUiOw=,tag:1rcGDKN5WYArdm7q006G+A==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-07-03T23:33:24Z"
-    mac: ENC[AES256_GCM,data:wWkqzq335HZ0YaL6cyYa+0dsYcEop908Dau36RLX6ZP4jBjw3BoudiT7QYH9hKNmlBYwJgF+q+hJgoulFuSQSB8TgzRAxEYjQAYaQaqyYmdWRBeQw9o6361Wm6JllDUzDWakrB3xg4g6CXhegFVR5V9nPRRwmJi+Xhw6ujgR7HU=,iv:1m+WMDEl0Mwr3O2tV6hcXgGqtDtWRjnaJvgxuk9FPmE=,tag:XJyVtnOAS8NrwPpZ/6BK+w==,type:str]
+    lastmodified: "2021-07-03T23:36:16Z"
+    mac: ENC[AES256_GCM,data:dKX9gabGH3TzbEY46rP3ZSSCBxPA5APcXoYnRrMIA8JnxFgohKAe9NlYxQK3Ca/t4uQJsGh5msU/iL81tVp7jEBI6/3d+zOXNu7onzXKQSjWtf6pHedo0OAERTzcGz97xGJS9+sPgJqlSmny00x3qY7+6txt7d4W+1OZWFzcsN0=,iv:Bes9x4KkKSIL9WOqiFx5pscL4TYYztmxFwYOsj4M0H8=,tag:P5heYL0IEQsMZr9obs63vA==,type:str]
     pgp:
-        - created_at: "2021-07-03T23:33:22Z"
+        - created_at: "2021-07-03T23:36:15Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv9EWC1hDWv48sAuhYS2vbnGhjivJpQVi9D5n/kVvXI2Car
-            dvymZU3WswByMj2e7egmtprEeVHfbX5osswnhU+5Y9ETGQpMxNGTK/51KJytPPlc
-            obfrgtTLZDZlz6ztZ6iodEE5FpShTG/CcMRZFxcpPcumrgaIQYB6Vnj/kq8PqPEa
-            OhQTopqs2WAc8EW3M6S6og+vyEZOI6/xl3EEhgTRqcG8ajoS6bg8XwRshmOeM+zb
-            bxJfawc0K/s56S2uAedOGXanuTm3sIxf0rQqO60t0yPMw/YaDoQIvZ0sR3LbkXpq
-            oPfCl/l4wuEe8k1Nus0ibeVlyYEDv4TZyxBXz2VzPUuIItTSe0dDGN11XUXx2bkE
-            rw7u0piQqYGdtcZDMwbysx5gJxo5TzT80ghKqYikGpGIUiRt6EVnpnSjOHJYucjy
-            2bJgSFWInX4gU4x82J7ZHGSG5q96WvEvIBr5shZlhcCZ+z0aP+WSxZQ/YT7aCrpc
-            R5u1xSdql6/gz3eUAq8C0l4BxU227yqtIgBz7Fr4OBSK217u7ht6DyIh7ZAMxaw5
-            mUvOa/8P15M/FPLUCbzR3khxGKbGwGqasQowLDvruhIl34bA7zKxj/G8nTQxQ0UP
-            cmd0yheq+S6XS5SF8FTt
-            =kwLP
+            hQGMA71EESEn7N2iAQv9F/oqdbVsRlKVrS7oKVKqOgLOstzWodLy3ZJBMXAE5HG6
+            bvtGytsG4mQYu8jfx3gSTUWi/E/ZnQGwglIqj+B+FChm8obdR1PRrXguQyBESjfe
+            kNH29D6+vTlD/rnvWCJM5/wofbyzYiA5GpMhr92LckZgFCRgXSk8L/+yxSNIMrRS
+            ngWTuHTtLegbeoSJks25Yj4XZxRo6lcRZOYQZQaoAZ28phaoTbzGMXIIIni2ONNu
+            3lrpOnjZCcaEtAFn/oEqFJNC4HW2UrWoA2TgXl1MLgR6haZHC21X8Z8C5R6VHCOC
+            OruqTs6OECW/IW/kesxGA6YVHd5qczxt3s4OZn6sNq+fWftPQJ48FnmxcdEqsi+L
+            rBcKy+mMSTn046ArQkMvddQ1qS5pQykDvVvT/VtnB0uZcRHO7K/i8ygNu6KZck5z
+            fEqZWv3GOMcqsaphtT3dHil/SE0p3DrIAtyD3qxFPrJXqjXbtEUYBa0uDaYXaCf9
+            yGSf7XsLldNbXJZaFhoK0l4BoHWmM8y3coj+uy1sq45+WdZ4nLbntXWiIqjmBSIy
+            zVp0GZZNNtYT9l5t5pckv4H6ekdM9zLJVdJQho4dUszyK08tjYEENzkBgTn8+eTo
+            v6kWKWZm82gIh+NeYlf6
+            =+Ve+
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
