--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -121,9 +121,9 @@ spec:
           - name: SHADOWSOCKS_LOG
             value: "on"
           - name: PUID
-            value: "1001"
+            value: 1001
           - name: PGID
-            value: "1001"
+            value: 1001
         envFrom:
           - secretRef:
               name: openvpn-secrets
