wip(openvpn): make gluetun sleep for infinity to debug

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -106,6 +106,8 @@ spec:
         # repo doesn't contain semver release
         image: qmcgaw/gluetun:v3.19.1
         imagePullPolicy: IfNotPresent
+        command: [ 'sleep' ]
+        args: [ 'infinity' ]
         securityContext:
           capabilities:
             add: [ "NET_ADMIN" ]
