--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -52,66 +52,66 @@ spec:
         cpu: 500m
       limits:
         memory: 5000Mi
-          #    additionalContainers:
-          #      #      - name: shadowsocks
-          #      #        image: shadowsocks/shadowsocks-libev:v3.3.5
-          #      #        command: [ "ss-local" ]
-          #      #        args: [ "-s",  "185.65.134.66", "-p", "443", "-l", "1080", "-b", "0.0.0.0", "-k", "23#dfsbbb", "-m", "chacha20" ]
-          #      #        imagePullPolicy: IfNotPresent
-          #      #        ports:
-          #      #          - containerPort: 1080
-          #      #            protocol: TCP
-          #      #        startupProbe:
-          #      #          tcpSocket:
-          #      #            port: 1080
-          #      #          initialDelaySeconds: 5
-          #      #          timeoutSeconds: 1
-          #      #          periodSeconds: 10
-          #      #          failureThreshold: 60
-          #      #          successThreshold: 1
-          #      #        livenessProbe:
-          #      #          tcpSocket:
-          #      #            port: 1080
-          #      #          timeoutSeconds: 1
-          #      #          periodSeconds: 10
-          #      #          failureThreshold: 3
-          #      #          successThreshold: 1
-          #      #        readinessProbe:
-          #      #          tcpSocket:
-          #      #            port: 1080
-          #      #          timeoutSeconds: 1
-          #      #          periodSeconds: 10
-          #      #          failureThreshold: 3
-          #      #          successThreshold: 1
-          #      - name: openvpn
-          #        # repo doesn't contain semver release
-          #        image: qmcgaw/gluetun:v3.19.1
-          #        imagePullPolicy: IfNotPresent
-          #        #        command: [ 'sleep' ]
-          #        #        args: [ 'infinity' ]
-          #        securityContext:
-          #          capabilities:
-          #            add: [ "NET_ADMIN" ]
-          #          readOnlyRootFilesystem: false
-          #        env:
-          #          - name: VPNSP
-          #            value: "mullvad"
-          #          - name: COUNTRY
-          #            value: "Germany,Italy"
-          #          - name: SHADOWSOCKS
-          #            value: "on"
-          #          - name: SHADOWSOCKS_LOG
-          #            value: "on"
-          #        #          - name: PUID
-          #        #            value: "1001"
-          #        #          - name: PGID
-          #        #            value: "1001"
-          #        envFrom:
-          #          - secretRef:
-          #              name: openvpn-secrets
-          #          ports:
-          #            - containerPort: 1080
-        #              protocol: TCP
+    additionalContainers:
+#      - name: shadowsocks
+#        image: shadowsocks/shadowsocks-libev:v3.3.5
+#        command: [ "ss-local" ]
+#        args: [ "-s",  "185.65.134.66", "-p", "443", "-l", "1080", "-b", "0.0.0.0", "-k", "23#dfsbbb", "-m", "chacha20" ]
+#        imagePullPolicy: IfNotPresent
+#        ports:
+#          - containerPort: 1080
+#            protocol: TCP
+#        startupProbe:
+#          tcpSocket:
+#            port: 1080
+#          initialDelaySeconds: 5
+#          timeoutSeconds: 1
+#          periodSeconds: 10
+#          failureThreshold: 60
+#          successThreshold: 1
+#        livenessProbe:
+#          tcpSocket:
+#            port: 1080
+#          timeoutSeconds: 1
+#          periodSeconds: 10
+#          failureThreshold: 3
+#          successThreshold: 1
+#        readinessProbe:
+#          tcpSocket:
+#            port: 1080
+#          timeoutSeconds: 1
+#          periodSeconds: 10
+#          failureThreshold: 3
+#          successThreshold: 1
+      - name: openvpn
+        # repo doesn't contain semver release
+        image: qmcgaw/gluetun:v3.19.1
+        imagePullPolicy: IfNotPresent
+        #        command: [ 'sleep' ]
+        #        args: [ 'infinity' ]
+        securityContext:
+          capabilities:
+            add: [ "NET_ADMIN" ]
+          readOnlyRootFilesystem: false
+        env:
+          - name: VPNSP
+            value: "mullvad"
+          - name: COUNTRY
+            value: "Germany,Italy"
+          - name: SHADOWSOCKS
+            value: "on"
+          - name: SHADOWSOCKS_LOG
+            value: "on"
+        #          - name: PUID
+        #            value: "1001"
+        #          - name: PGID
+        #            value: "1001"
+        envFrom:
+          - secretRef:
+              name: openvpn-secrets
+#                    ports:
+#                      - containerPort: 1080
+#                      protocol: TCP
 #        volumeMounts:
 #          - mountPath: /gluetun
 #            name: gluetun
