wip(openvpn): re add readOnlyRootFilesystem flag back to openvpn container

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -90,6 +90,7 @@ spec:
         securityContext:
           capabilities:
             add: [ "NET_ADMIN" ]
+          readOnlyRootFilesystem: false
         env:
           - name: VPNSP
             value: "mullvad"
