wip(openvpn): changed podSeucurityContext to securityContext

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -36,9 +36,9 @@ spec:
               - "qbit.${SECRET_DOMAIN}"
     settings:
       automaticPortSetup: true
-#    podSecurityContext:
-#      runAsUser: 1001
-#      runAsGroup: 1001
+    securityContext:
+      runAsUser: 1001
+      runAsGroup: 1001
     persistence:
       config:
         enabled: true
@@ -90,7 +90,6 @@ spec:
         securityContext:
           capabilities:
             add: [ "NET_ADMIN" ]
-          readOnlyRootFilesystem: false
         env:
           - name: VPNSP
             value: "mullvad"
