--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -80,6 +80,8 @@ spec:
             value: "tcp"
           - name: OPENVPN_IPV6
             value: "on"
+          - name: DOT
+            value: "off"
         envFrom:
           - secretRef:
               name: openvpn-secrets
