--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -80,8 +80,10 @@ spec:
             value: "tcp"
           - name: OPENVPN_IPV6
             value: "on"
-          - name: DOT
-            value: "off"
+#          - name: DOT
+#            value: "off"
+          - name: UNBLOCK
+            value: "am.i.mullvad.net"
         envFrom:
           - secretRef:
               name: openvpn-secrets
