--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -80,8 +80,8 @@ spec:
             value: "tcp"
           - name: OPENVPN_IPV6
             value: "on"
-#          - name: DOT
-#            value: "off"
+          - name: DOT_PROVIDERS
+            value: "cloudflare,google"
           - name: UNBLOCK
             value: "am.i.mullvad.net"
         envFrom:
@@ -115,7 +115,7 @@ spec:
           initialDelaySeconds: 30
           timeoutSeconds: 8
           periodSeconds: 120
-          failureThreshold: 3
+          failureThreshold: 5
           successThreshold: 1
 #        readinessProbe:
 #          tcpSocket:
