--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -81,9 +81,7 @@ spec:
           - name: OPENVPN_IPV6
             value: "on"
           - name: DOT_PROVIDERS
-            value: "cloudflare,google"
-          - name: UNBLOCK
-            value: "am.i.mullvad.net"
+            value: "google"
         envFrom:
           - secretRef:
               name: openvpn-secrets
