wip(openvpn): add TZ env var to gluetun

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -82,6 +82,8 @@ spec:
             value: "on"
           - name: DOT_PROVIDERS
             value: "google"
+          - name: TZ
+            value: "Africa/Cairo"
         envFrom:
           - secretRef:
               name: openvpn-secrets
