wip(openvpn): fix incorrect shadowsocks password

--- a/cluster/apps/default/qbittorent/secrets.enc.yaml
+++ b/cluster/apps/default/qbittorent/secrets.enc.yaml
@@ -4,33 +4,33 @@ metadata:
     name: openvpn-secrets
     namespace: default
 stringData:
-    OPENVPN_USER: ENC[AES256_GCM,data:9RTroSE4UZ15LXe7xuLXRQ==,iv:WMj95LtOW5jc1II5+d/Ajo80C/HabX4qQx3reyZx8p8=,tag:EYU2KwKUqwjL247qMFtjhA==,type:str]
-    SHADOWSOCKS_PASSWORD: ENC[AES256_GCM,data:RA==,iv:J8lTsxt6Mmk3rumu4mx3w7jetVB9AwXrjPbcPaHUiOw=,tag:1rcGDKN5WYArdm7q006G+A==,type:str]
+    OPENVPN_USER: ENC[AES256_GCM,data:0mv/Cg1v0+zu4VmLvxL2zw==,iv:GGZGkkLeYQHToOtgLG1CsxA7+DF5qev41ZsLF5VVQV0=,tag:nZaMAJfvaZRQY04PnB5UsQ==,type:str]
+    SHADOWSOCKS_PASSWORD: ENC[AES256_GCM,data:4NqY/M9LPaTg,iv:x+d46plVn4g26tHbL34UZAOcLzGsTVzdVEMKBB2nJXs=,tag:Lm1lUaNS6M9f0bRpQzWXHA==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-07-03T23:36:16Z"
-    mac: ENC[AES256_GCM,data:dKX9gabGH3TzbEY46rP3ZSSCBxPA5APcXoYnRrMIA8JnxFgohKAe9NlYxQK3Ca/t4uQJsGh5msU/iL81tVp7jEBI6/3d+zOXNu7onzXKQSjWtf6pHedo0OAERTzcGz97xGJS9+sPgJqlSmny00x3qY7+6txt7d4W+1OZWFzcsN0=,iv:Bes9x4KkKSIL9WOqiFx5pscL4TYYztmxFwYOsj4M0H8=,tag:P5heYL0IEQsMZr9obs63vA==,type:str]
+    lastmodified: "2021-07-08T20:37:23Z"
+    mac: ENC[AES256_GCM,data:6tgRcaztWVPo8qETp8VZU/z8ajRtSW0cCMzHPFnsVt8ujQvjg5mwxVdSyMrgBfXAxr0m074PreMqeIiWqmXvr4NCzbtkDLm4ey7uAW58YjKRgpHMl4yZ1cbjYCbFPSl1NsjW7SrkCdBq14HJHEMLPgfVOKQJ5OTqBVn82hMj+zA=,iv:aB/aNYfaFPqbS28XE8TqZhpF5MW2XvmcQ+unsDrSGYA=,tag:qdzpkY7llGo3HKd8rcYgjg==,type:str]
     pgp:
-        - created_at: "2021-07-03T23:36:15Z"
+        - created_at: "2021-07-08T20:37:21Z"
           enc: |
             -----BEGIN PGP MESSAGE-----
 
-            hQGMA71EESEn7N2iAQv9F/oqdbVsRlKVrS7oKVKqOgLOstzWodLy3ZJBMXAE5HG6
-            bvtGytsG4mQYu8jfx3gSTUWi/E/ZnQGwglIqj+B+FChm8obdR1PRrXguQyBESjfe
-            kNH29D6+vTlD/rnvWCJM5/wofbyzYiA5GpMhr92LckZgFCRgXSk8L/+yxSNIMrRS
-            ngWTuHTtLegbeoSJks25Yj4XZxRo6lcRZOYQZQaoAZ28phaoTbzGMXIIIni2ONNu
-            3lrpOnjZCcaEtAFn/oEqFJNC4HW2UrWoA2TgXl1MLgR6haZHC21X8Z8C5R6VHCOC
-            OruqTs6OECW/IW/kesxGA6YVHd5qczxt3s4OZn6sNq+fWftPQJ48FnmxcdEqsi+L
-            rBcKy+mMSTn046ArQkMvddQ1qS5pQykDvVvT/VtnB0uZcRHO7K/i8ygNu6KZck5z
-            fEqZWv3GOMcqsaphtT3dHil/SE0p3DrIAtyD3qxFPrJXqjXbtEUYBa0uDaYXaCf9
-            yGSf7XsLldNbXJZaFhoK0l4BoHWmM8y3coj+uy1sq45+WdZ4nLbntXWiIqjmBSIy
-            zVp0GZZNNtYT9l5t5pckv4H6ekdM9zLJVdJQho4dUszyK08tjYEENzkBgTn8+eTo
-            v6kWKWZm82gIh+NeYlf6
-            =+Ve+
+            hQGMA71EESEn7N2iAQv/fDyoNoPn+UShjpBq4i01UoykPVjmVjbm7FA+318NjDVd
+            LKXha3Mv562kqGqMSKT7CiHSpl/0Qz7km5DnK+CdGpH4Qvba9OpoBEh+IBh1PYJl
+            HH7417Jq2z1FKdfvseYWYrSnGysa29Mz2Z1BXQzsDCM1OBNFJEqOKXy4TTl9Nqni
+            Xgl2rLKbVZXd0yw0lMNwcKurdPNvc4FHnguKRnVcd+YHiC17ynvA7UR91XdbNJJZ
+            M7HGUUnuoLpKSLwFGOqzpXOqeS/EFc+4TKC/E89txQTFyi0XwVuaGg/B6J/A4T6b
+            ZQwkzKQI+YBbCJX2jR1HHHoYzldv7Q+nV/ntCaeLnNc6nFUwl+hsgNlunGpsn43v
+            6dYzosMtl0u5xtHsOk/7PTh7GTSHIEYVvXTQvLpQuGyA1dhYz1pQPiRmvaOJD7lQ
+            KQPu35A3iICzJCVUvjrHXUG2E9yfYBlI+I/LmUSyaS/zqclLZWX1C/vG4cOIz6Af
+            MB+k5v3yZAbPtkdiLvCp0l4BNMeDIHXxExpMdabAwJtkJ+hYGg20X5zhAWr4pVm3
+            szjW8uk9J4M7pInro3jOQpq+Fq2oPYBIlqK+EQvvqD+iygqIUfgGWtbRiGCWfP99
+            bWInETQP1HZqHsrDCBE8
+            =R34w
             -----END PGP MESSAGE-----
           fp: 2D47B9C25AAD87860CC1778F7022B8F414F4AEED
     encrypted_regex: ^(data|stringData)$
