--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -49,14 +49,14 @@ spec:
       downloads:
         enabled: true
         existingClaim: nfs-media-downloads-pvc
-      openvpn-config:
-        enabled: true
-        type: "custom"
-        secret:
-          secretName: openvpn-secrets
-          items:
-            - key: mullvad_de_fra.conf
-              path: mullvad_de_fra.conf
+#      openvpn-config:
+#        enabled: true
+#        type: "custom"
+#        secret:
+#          secretName: openvpn-secrets
+#          items:
+#            - key: mullvad_de_fra.conf
+#              path: mullvad_de_fra.conf
       shared:
         enabled: true
         type: emptyDir
