wip(openvpn): add openvpn-config

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -49,8 +49,8 @@ spec:
       downloads:
         enabled: true
         existingClaim: nfs-media-downloads-pvc
-#      openvpn-config:
-#        enabled: true
+      openvpn-config:
+        enabled: true
 #        type: "custom"
 #        secret:
 #          secretName: openvpn-secrets
