--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -97,6 +97,8 @@ spec:
                 key: OPENVPN_PASSWORD
           - name: OPENVPN_CUSTOM_CONFIG
             value: "/gluetun/custom/mullvad_de_fra.conf"
+          - name: FIREWALL_OUTBOUND_SUBNETS
+            value: 127.0.0.1/32
           - name: PROTOCOL
             value: "tcp"
           - name: OPENVPN_IPV6
