wip(openvpn): attempt at making shadowsocks work

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -91,7 +91,10 @@ spec:
                 name: openvpn-secrets
                 key: OPENVPN_USER
           - name: OPENVPN_PASSWORD
-            value: "m"
+            valueFrom:
+              secretKeyRef:
+                name: openvpn-secrets
+                key: OPENVPN_PASSWORD
           - name: OPENVPN_CUSTOM_CONFIG
             value: "/gluetun/custom/mullvad_de_fra.conf"
           - name: FIREWALL_OUTBOUND_SUBNETS
