wip(openvpn): remove shadowsocks

--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -69,14 +69,14 @@ spec:
       limits:
         memory: 5000Mi
     additionalContainers:
-      - name: shadowsocks
-        image: shadowsocks/shadowsocks-libev:v3.3.5
-        command: [ "ss-local" ]
-        args: [ "-s",  "185.213.155.66", "-p", "443", "-l", "1080", "-b", "0.0.0.0", "-k", "23#dfsbbb", "-m", "chacha20" ]
-        imagePullPolicy: IfNotPresent
-        ports:
-          - containerPort: 1080
-            protocol: TCP
+#      - name: shadowsocks
+#        image: shadowsocks/shadowsocks-libev:v3.3.5
+#        command: [ "ss-local" ]
+#        args: [ "-s",  "185.213.155.66", "-p", "443", "-l", "1080", "-b", "0.0.0.0", "-k", "23#dfsbbb", "-m", "chacha20" ]
+#        imagePullPolicy: IfNotPresent
+#        ports:
+#          - containerPort: 1080
+#            protocol: TCP
       - name: openvpn
         # repo doesn't contain semver release
         image: qmcgaw/gluetun:v3.19.1
