--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -99,6 +99,8 @@ spec:
             value: "/gluetun/custom/mullvad_de_fra.conf"
           - name: FIREWALL_INPUT_PORTS
             value: "443,1080"
+          - name: FIREWALL_DEBUG
+            value: "on"
           - name: PROTOCOL
             value: "tcp"
           - name: OPENVPN_IPV6
