--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -98,9 +98,11 @@ spec:
           - name: OPENVPN_CUSTOM_CONFIG
             value: "/gluetun/custom/mullvad_de_fra.conf"
           - name: FIREWALL_INPUT_PORTS
-            value: "443,1080"
+            value: "443"
+          - name: FIREWALL_VPN_INPUT_PORTS
+            value: "443"
           - name: FIREWALL
-            value: "off"
+            value: "on"
           - name: FIREWALL_DEBUG
             value: "on"
           - name: PROTOCOL
