--- a/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
+++ b/cluster/apps/default/qbittorent/qbittorent-helm-release.yaml
@@ -103,6 +103,8 @@ spec:
             value: "443,1080"
           - name: FIREWALL
             value: "on"
+          - name: FIREWALL_OUTBOUND_SUBNETS
+            value: "185.213.155.66/32"
           - name: FIREWALL_DEBUG
             value: "on"
           - name: PROTOCOL
